--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@types/three": "^0.165.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
