--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.11.3",
+    "@material-tailwind/react": "^2.1.9",
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
     "@studio-freight/react-lenis": "^0.0.47",
@@ -18,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.23.1",
     "three": "^0.165.0"
   },
