--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.23.1",
-    "three": "^0.165.0"
+    "react-social-icons": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
